changed sdk ver and fixed tooltip error